cabal-version:       2.4
name:                advent-2021
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/lylek/advent-2021#advent-2021) for more details.
homepage:            https://github.com/lylek/advent-2021
bug-reports:         https://github.com/lylek/advent-2021/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Lyle Kopnicky
maintainer:          Lyle Kopnicky <lyle@kopnicky.com>
copyright:           2021 Lyle Kopnicky
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/lylek/advent-2021.git

common common-options
  build-depends:       base ^>= 4.14.3.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Advent2021

executable advent-2021
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       advent-2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
