cabal-version:       2.4
name:                advent2021
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/lylek/advent2021#advent2021) for more details.
homepage:            https://github.com/lylek/advent2021
bug-reports:         https://github.com/lylek/advent2021/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Lyle Kopnicky
maintainer:          Lyle Kopnicky <lyle@kopnicky.com>
copyright:           2021 Lyle Kopnicky
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/lylek/advent2021.git

common common-options
  build-depends:       base ^>= 4.14.3.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       attoparsec,
                       containers,
                       pretty-simple,
                       safe,
                       text
  hs-source-dirs:      src
  exposed-modules:     Advent2021,
                       Advent2021.Day01,
                       Advent2021.Day02,
                       Advent2021.Day03,
                       Advent2021.Day04

executable advent2021
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       advent2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite advent2021-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Advent2021.Day01Spec,
                       Advent2021.Day02Spec,
                       Advent2021.Day03Spec,
                       Advent2021.Day04Spec
  build-depends:       advent2021,
                       heredoc,
                       hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

